Do not show pinned tabs on multiple instances

BUG=691781

Review-Url: https://codereview.chromium.org/2709393006
Cr-Commit-Position: refs/heads/master@{#453294}

Former-commit-id: 4349089ebb28a0509a0fc20af83c9a2c0912c3ed