chrome/browser/ui/startup/startup_tab_provider_unittest.cc
@@ -199,13 +199,14 @@ TEST(StartupTabProviderTest, GetPinnedTabsForState) {
   SessionStartupPref pref_default(SessionStartupPref::Type::DEFAULT);
   SessionStartupPref pref_urls(SessionStartupPref::Type::URLS);
 
-  StartupTabs output =
-      StartupTabProviderImpl::GetPinnedTabsForState(pref_default, pinned);
+  StartupTabs output = StartupTabProviderImpl::GetPinnedTabsForState(
+      pref_default, pinned, false);
 
   ASSERT_EQ(1U, output.size());
   EXPECT_EQ("www.google.com", output[0].url.host());
 
-  output = StartupTabProviderImpl::GetPinnedTabsForState(pref_urls, pinned);
+  output =
+      StartupTabProviderImpl::GetPinnedTabsForState(pref_urls, pinned, false);
 
   ASSERT_EQ(1U, output.size());
   EXPECT_EQ("www.google.com", output[0].url.host());
@@ -214,9 +215,18 @@ TEST(StartupTabProviderTest, GetPinnedTabsForState) {
 TEST(StartupTabProviderTest, GetPinnedTabsForState_Negative) {
   StartupTabs pinned = {StartupTab(GURL("https://www.google.com"), true)};
   SessionStartupPref pref_last(SessionStartupPref::Type::LAST);
+  SessionStartupPref pref_default(SessionStartupPref::Type::DEFAULT);
 
+  // Session restore preference should block reading pinned tabs.
   StartupTabs output =
-      StartupTabProviderImpl::GetPinnedTabsForState(pref_last, pinned);
+      StartupTabProviderImpl::GetPinnedTabsForState(pref_last, pinned, false);
+
+  ASSERT_TRUE(output.empty());
+
+  // Pinned tabs are not added when this profile already has a nonempty tabbed
+  // browser open.
+  output =
+      StartupTabProviderImpl::GetPinnedTabsForState(pref_default, pinned, true);
 
   ASSERT_TRUE(output.empty());
 }
